force-app/main/default/objects/Account/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <length>80</length>
    <type>Text</type>
</CustomField>