force-app/main/default/objects/Account/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Manager</label>
    <type>Checkbox</type>
</CustomField>