force-app/main/default/objects/Account/fields/Subaru__c.field-meta.xml
<CustomField>
    <fullName>Subaru__c</fullName>
    <label>Subaru</label>
    <length>16</length>
    <type>Text</type>
</CustomField>