force-app/main/default/objects/Account/fields/subjects__c.field-meta.xml
<CustomField>
    <fullName>subjects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>subjects</label>
    <type>Checkbox</type>
</CustomField>